Adicionada página de login

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ header{
     height: 130px;
 }
 
+.posicionamento.header{
+    position: relative;
+}
+
 body{
     background-color: #3b414b;
 }
@@ -21,6 +25,29 @@ body{
     justify-content: space-between;
     align-items: center;
 }
+
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
+
+.busca input[type="text"]{
+    height: 25px;
+    width: 240px;
+    padding: 3px;
+}
+
+.busca input[type="text"]::placeholder{
+    color: #3b414b;
+    font-weight: bold;
+}
+
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
 
 .menu a{
     color: #FFFFFF;
@@ -35,6 +62,12 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
 
 .banner{
     height: 650px;
@@ -74,6 +107,21 @@ body{
     margin-bottom: 50px;
 }
 
+
+#carrossel img{
+    display: none;
+}
+
+.banner-ativo{
+    display: flex;
+}
+
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
+
 .secao-sobre{
     background-color: #3b414b;
     padding: 20px;
@@ -107,7 +155,7 @@ body{
     font-weight: bold;
 }
 
-.noticia a{
+.noticias a{
     font-family: 'Roboto', sans-serif;
     font-size: 22px;
     color: #FFFFFF;
@@ -120,6 +168,12 @@ body{
     height: 470px; 
    
 }
+
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
 
 .secao-galeria{
     background-color: #3b414b;
@@ -156,9 +210,11 @@ body{
     display: none;
 }
 
-.posicionamento.header{
-    position: relative;
-}
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
 
 .secao-footer{
     background-color: #6c7178;
@@ -218,6 +274,12 @@ button:hover {
     width: 70px;
 }
 
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
+
 .legal{
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
@@ -249,6 +311,81 @@ button:hover {
 }
 
 
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
+
+.log {
+    background-color: #3b414b;
+    padding: 20px;
+}
+
+.conteudo-log {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.login {
+    background-color: #6c7178;
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    color: #FFFFFF;
+    text-decoration: none;
+    padding: 20px;
+    margin-right: 30px;
+    box-shadow: 5px 5px 5px #0000003f;
+}
+
+.form-login{
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+}
+
+.form-login[type="email"]{
+    height: 25px;
+    width: 240px;
+    padding: 3px;
+}
+
+.form-login input[type="email"]::placeholder{
+    color: #3b414b;
+    font-weight: bold;
+}
+
+.form-login[type="text"]{
+    height: 25px;
+    width: 220px;
+    padding: 3px;
+}
+
+.form-login input[type="text"]::placeholder{
+    color: #3b414b;
+    font-weight: bold;
+}
+
+.log-button{
+    height: 45px;
+    padding: 2px 10px;
+    border: 2px solid #3b414b;
+    border-radius: 8px;
+}
+
+.log-cadastro-button{
+    height: 45px;
+    padding: 2px 10px;
+    border: 2px solid #3b414b;
+    border-radius: 8px;
+}
+
+
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
+
+
 /* Ajustar para tablet */
 @media screen and (max-width: 1200px) {
     .container-grid{
@@ -261,6 +398,11 @@ button:hover {
         size: 200px;
     }
 }
+
+
+/* ============================================================================ */
+/* ============================================================================ */
+/* ============================================================================ */
 
 
 /* Ajustar para smartphone */
@@ -283,6 +425,14 @@ button:hover {
     .menu a{
         text-align: center;
         padding: 15px;
+    }
+
+    .menu-ativo{
+        display: flex;
+    }
+
+    .posicionamento-header{
+        position: relative;
     }
 
 }
