--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ body{
     justify-content: space-between;
 }
 
+.barras{
+    width: 50px;
+    display: none;
+}
+
 
 /* ============================================================================ */
 /* ============================================================================ */
@@ -105,6 +110,10 @@ body{
 
 .texto-banner p{
     margin-bottom: 50px;
+}
+
+.carrossel img{
+    width: 100%;
 }
 
 
@@ -176,8 +185,10 @@ body{
 
 
 .secao-galeria{
+    width: 100%;
     background-color: #3b414b;
     display: flex;
+    /* padding: 20px; */
 }
 
 .concurso{
@@ -205,10 +216,6 @@ body{
     margin-bottom: 20px;
 }
 
-.barras{
-    width: 50px;
-    display: none;
-}
 
 
 /* ============================================================================ */
@@ -372,6 +379,33 @@ button:hover {
     border-radius: 8px;
 }
 
+.form-cadastrar{
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+}
+
+.form-cadastrar[type="email"]{
+    height: 25px;
+    width: 240px;
+    padding: 3px;
+}
+
+.form-cadastrar input[type="email"]::placeholder{
+    color: #3b414b;
+    font-weight: bold;
+}
+
+.form-cadastrar[type="text"]{
+    height: 25px;
+    width: 220px;
+    padding: 3px;
+}
+
+.form-cadastrar input[type="text"]::placeholder{
+    color: #3b414b;
+    font-weight: bold;
+}
+
 .log-cadastro-button{
     height: 45px;
     padding: 2px 10px;
@@ -433,6 +467,55 @@ button:hover {
 
     .posicionamento-header{
         position: relative;
+    }
+
+    .footer-texto2{
+        display: none;
+    }
+
+    .footer-texto3{
+        display: none;
+    }
+    .texto-sobre {
+        background-color: #6c7178;
+        width: 100%;
+        font-family: 'Roboto', sans-serif;
+        font-size: 18px;
+        color: #FFFFFF;
+        text-decoration: none;
+        padding: 20px;
+        margin-right: 30px;
+        /* background: var(--gradiente);
+        box-shadow: 5px 5px 10px #000000,  10px 10px 20px #00000080; */
+        box-shadow: 5px 5px 5px #0000003f;
+    }
+    
+    .atualizacoes{
+        font-family: 'Roboto', sans-serif;
+        font-size: 26px;
+        color: #FFFFFF;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    
+    .noticias a{
+        font-family: 'Roboto', sans-serif;
+        font-size: 18px;
+        color: #FFFFFF;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    .concurso{
+        align-items: center;
+    }
+
+    .galeria2{
+        display: none;
+    }
+
+    .galeria3{
+        display: none;
     }
 
 }
