--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ body{
     font-size: 20px;
 }
 
+.menu a:hover{
+    text-decoration: underline;
+}
+
 .menu{
     width: 680px;
     display: flex;
@@ -75,7 +79,7 @@ body{
 
 
 .banner{
-    height: 650px;
+    height: 500px;
     background-image: url(../img/banners/Banner_01.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -174,7 +178,7 @@ body{
 
 .imgpromo img{
     width: 400px;
-    height: 470px; 
+    height: 480px; 
    
 }
 
@@ -185,7 +189,6 @@ body{
 
 
 .secao-galeria{
-    width: 100%;
     background-color: #3b414b;
     display: flex;
     /* padding: 20px; */
@@ -200,6 +203,8 @@ body{
     line-height: 50%;
     margin-bottom: 20px;
     margin-top: 10px;
+    /* margin-left: 10px; */
+    /* text-align: center; */
 }
 
 .galeria{
@@ -326,22 +331,26 @@ button:hover {
 .log {
     background-color: #3b414b;
     padding: 20px;
+    /* display: flex;
+    align-items: center; */
 }
 
 .conteudo-log {
     margin-top: 20px;
-    display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .login {
+    /* align-items: center; */
+    margin-top: 20px;
     background-color: #6c7178;
     font-family: 'Roboto', sans-serif;
     font-size: 25px;
     color: #FFFFFF;
     text-decoration: none;
     padding: 20px;
-    margin-right: 30px;
+    margin-right: 10px;
     box-shadow: 5px 5px 5px #0000003f;
 }
 
@@ -407,6 +416,7 @@ button:hover {
 }
 
 .log-cadastro-button{
+    margin-top: 20px;
     height: 45px;
     padding: 2px 10px;
     border: 2px solid #3b414b;
@@ -454,11 +464,15 @@ button:hover {
         position: absolute;
         top: 0;
         right: 60px;
-        background-color: #000000;
+        background-color: #3b414b;
     }
     .menu a{
         text-align: center;
         padding: 15px;
+    }
+
+    .menu a:hover{
+        background-color: #586170;
     }
 
     .menu-ativo{
@@ -469,13 +483,6 @@ button:hover {
         position: relative;
     }
 
-    .footer-texto2{
-        display: none;
-    }
-
-    .footer-texto3{
-        display: none;
-    }
     .texto-sobre {
         background-color: #6c7178;
         width: 100%;
@@ -489,7 +496,7 @@ button:hover {
         box-shadow: 5px 5px 10px #000000,  10px 10px 20px #00000080; */
         box-shadow: 5px 5px 5px #0000003f;
     }
-    
+
     .atualizacoes{
         font-family: 'Roboto', sans-serif;
         font-size: 26px;
@@ -497,7 +504,7 @@ button:hover {
         text-decoration: none;
         font-weight: bold;
     }
-    
+
     .noticias a{
         font-family: 'Roboto', sans-serif;
         font-size: 18px;
@@ -506,8 +513,29 @@ button:hover {
         font-weight: bold;
     }
 
-    .concurso{
+    .imgpromo{
+        padding-top: 20px;
+    }
+
+    .imgpromo img{
+        width: 100%;
+        /* height: 470px;  */
+       
+    }
+
+    .secao-galeria{
+        text-align: center;
         align-items: center;
+    }
+    .concurso{
+        text-align: center;
+    }
+
+    .galeria img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
     }
 
     .galeria2{
@@ -515,6 +543,14 @@ button:hover {
     }
 
     .galeria3{
+        display: none;
+    }
+
+    .footer-texto2{
+        display: none;
+    }
+
+    .footer-texto3{
         display: none;
     }
 
